Vignette is updated

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,25 +36,60 @@ devtools::install_github("sokbae/ciccr")
 ```
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
-
 ```{r example}
 library(ciccr)
+devtools::load_all(".")
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+To illustrate our method, we use the dataset ACS that is included the packcage. This dataset is a extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. The included variables are as follows:  
 
-```{r cars}
-summary(cars)
+```{r}
+  y = ACS$topincome
+  t = ACS$baplus
+  x = ACS$age
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
+- The binary outcome `Top Income' ($Y$) is defined to be one if a respondent's annual total pre-tax wage and salary income is top-coded. In our sample extract, the top-coded income bracket has median income $565,000 and the next highest income that is not top-coded is $327,000.   
 
-You can also embed plots, for example:
+- The binary treatment ($T$) is defined to be one if a respondent has a master's degree, a professional degree, or  a doctoral degree.
 
-```{r pressure, echo = FALSE}
-plot(pressure)
+- The covariate ($X$) is age in years and is restricted to be between 25 and 70.
+
+The original ACS sample is not a case-control sample but we construct one by the following procedure. 
+
+1. The case sample $(Y=1)$ is composed of 921 individuals whose income is top-coded.
+2. The control sample $(Y=0)$ of equal size is randomly drawn without replacement from the pool of individuals whose income is not top-coded. 
+
+We now construct cubic b-spline terms with three inner knots using the age variable.
+
+```{r}
+  x = splines::bs(x, df = 6)
+```
+ 
+Define $\beta(y) = E [\log \text{OR}(X) | Y = y]$ for $y = 0,1$, where $\text{OR}(x)$ is the odds ratio conditional on $X=x$:
+$$
+\text{OR}(x) = \frac{P(T=1|Y=1,X=x)}{P(T=0|Y=1,X=x)}\frac{P(T=0|Y=0,X=x)}{P(T=1|Y=0,X=x)}.
+$$
+Using the retropspective sieve logistric regression model, we estimate $\beta(1)$ by
+
+```{r}
+  results_case = avg_retro_logit(y,t,x,'case')
+  results_case$est
+  results_case$se
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
+Here, option `'case'` refers to conditioning on $Y=1$. Similarly, we estimate $\beta(0)$ by
+
+```{r}
+  results_control = avg_retro_logit(y,t,x,'control')
+  results_control$est
+  results_control$se
+```
+
+Here, option `'control'` refers to conditioning on $Y=1$. We now carry out causal inference by
+
+```{r}
+  cicc(y,t,x,0.2)
+```
+
