--- a/vignettes/ciccr-vignette.Rmd
+++ b/vignettes/ciccr-vignette.Rmd
@@ -25,13 +25,9 @@ devtools::load_all(".")
 This vignette describes how to replicate the empirical results reported
   in the paper entitled "Causaul Inference in Case-Control Studies".
 
-# Overview
+# Tutorials
 
-1.  
-
-1.  
-
-We first define variables using the ACS dataset.
+To illustrate our method, we use the dataset ACS that is included the packcage. This dataset is a extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. The included variables are as follows:  
 
 ```{r}
   y = ACS$topincome
@@ -39,20 +35,44 @@ We first define variables using the ACS dataset.
   x = ACS$age
 ```
 
-Then, we run the following code.
+- The binary outcome `Top Income' ($Y$) is defined to be one if a respondent's annual total pre-tax wage and salary income is top-coded. In our sample extract, the top-coded income bracket has median income $565,000 and the next highest income that is not top-coded is $327,000.   
+
+- The binary treatment ($T$) is defined to be one if a respondent has a master's degree, a professional degree, or  a doctoral degree.
+
+- The covariate ($X$) is age in years and is restricted to be between 25 and 70.
+
+The original ACS sample is not a case-control sample but we construct one by the following procedure. 
+
+1. The case sample $(Y=1)$ is composed of 921 individuals whose income is top-coded.
+2. The control sample $(Y=0)$ of equal size is randomly drawn without replacement from the pool of individuals whose income is not top-coded. 
+
+We now construct cubic b-spline terms with three inner knots using the age variable.
 
 ```{r}
-  results = avg_retro_logit(y,t,x,'case')
-  est_case = results$est
-  se_case = results$se
+  x = splines::bs(x, df = 6)
 ```
-
+ 
+Define $\beta(y) = E [\log \text{OR}(X) | Y = y]$ for $y = 0,1$, where $\text{OR}(x)$ is the odds ratio conditional on $X=x$:
+$$
+\text{OR}(x) = \frac{P(T=1|Y=1,X=x)}{P(T=0|Y=1,X=x)}\frac{P(T=0|Y=0,X=x)}{P(T=1|Y=0,X=x)}.
+$$
+Using the retropspective sieve logistric regression model, we estimate $\beta(1)$ by
 
 ```{r}
-  avg_retro_logit(y,t,x,'case')
-  avg_retro_logit(y,t,x,'control')
+  results_case = avg_retro_logit(y,t,x,'case')
+  results_case$est
+  results_case$se
 ```
 
+Here, option `'case'` refers to conditioning on $Y=1$. Similarly, we estimate $\beta(0)$ by
+
+```{r}
+  results_control = avg_retro_logit(y,t,x,'control')
+  results_control$est
+  results_control$se
+```
+
+Here, option `'control'` refers to conditioning on $Y=1$. We now carry out causal inference by
 
 ```{r}
   cicc(y,t,x,0.2)
