--- a/vignettes/ciccr-vignette.Rmd
+++ b/vignettes/ciccr-vignette.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Causaul Inference in Case-Control Studies: Vignette"
+title: "Causal Inference in Case-Control Studies: Vignette"
 output: rmarkdown::html_vignette
 description: >
   This vignette describes how to replicate the empirical results reported
   in the paper entitled "Causaul Inference in Case-Control Studies".
 vignette: >
-  %\VignetteIndexEntry{Causaul Inference in Case-Control Studies: Vignette}
+  %\VignetteIndexEntry{Causal Inference in Case-Control Studies: Vignette}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -23,15 +23,21 @@ library(devtools)
 devtools::load_all(".")
 ```
 
+# Overview
+
 ```{r setup}
 library(ciccr)
 ```
 
-This vignette describes how to use package "ciccr" that is based on the paper entitled  "Causaul Inference in Case-Control Studies".
+This vignette describes how to use package "ciccr" that is based on the paper entitled  "Causal Inference in Case-Control Studies".
+
+# The Model and Inference 
+
+This section will be added ...
 
 # Tutorials
 
-To illustrate the usefulness of the package, we use the dataset ACS that is included the packcage. This dataset is a extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
+To illustrate the usefulness of the package, we use the dataset ACS that is included the package. This dataset is a extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
 
 ```{r}
   y = ACS$topincome
@@ -60,7 +66,7 @@ Define $\beta(y) = E [\log \text{OR}(X) | Y = y]$ for $y = 0,1$, where $\text{OR
 $$
 \text{OR}(x) = \frac{P(T=1|Y=1,X=x)}{P(T=0|Y=1,X=x)}\frac{P(T=0|Y=0,X=x)}{P(T=1|Y=0,X=x)}.
 $$
-Using the retropspective sieve logistric regression model, we estimate $\beta(1)$ by
+Using the retrospective sieve logistic regression model, we estimate $\beta(1)$ by
 
 ```{r}
   results_case = avg_retro_logit(y, t, x, 'case')
@@ -83,14 +89,37 @@ Here, option `'control'` refers to conditioning on $Y=1$.
 We carry out causal inference by
 
 ```{r}
-  cicc(y, t, x, 0.2)
+results = cicc(y, t, x, 0.2, 0.9)
 ```
 
-Here, 0.2 is the specified upper bound for unknown $p = \text{Pr}(Y=1)$. If it is not specified, the dafault choice for $p$ is $p = 1$.
+Here, 0.2 is the specified upper bound for unknown $p = \text{Pr}(Y=1)$. If it is not specified, the default choice for the upper bound for $p$ is p_upper = 1.
+Here, 0.9 refers to the level of the confidence interval. 0.95 is the default choice. 
+
+The point estimate and the upper end of the confidence interval can be obtained from the saved results: 
 
 ```{r}
-  cicc(y, t, x)
+ # point estimate
+ results$est
+ # point estimate
+ results$ci
 ```
+
+To be more compatible with the odds ratio, it is useful to transform them by the exponential function:
+```{r}
+ # point estimate
+ exp(results$est)
+ # point estimate
+ exp(results$ci)
+```
+
+# Comparison with Logistic Regression
+
+```{r}
+logit = stats::glm(y~t+x, family=stats::binomial("logit"))
+stats::coef(logit)
+stats::confint(logit, level = 0.9)
+```
+
 
 # Reference
 
