--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of ciccr is to implement inference methods described in the paper entitled "Causal Inference in Case-Control Studies".
+The goal of ciccr is to implement methods for carrying out causal inference in case-control studies.
 
 ## Installation
 
@@ -28,25 +28,21 @@ You can install the released version of ciccr from [CRAN](https://CRAN.R-project
 install.packages("ciccr")
 ```
 
-And the development version from [GitHub](https://github.com/) with:
+Alternatively, you can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
+# install.packages("devtools") # uncomment this line if devtools is not installed yet 
 devtools::install_github("sokbae/ciccr")
 ```
 ## Example
 
-```{r, include = FALSE}
-# Need to delete this part for CRAN submission
-library(devtools)
-devtools::load_all(".")
-```
+We first call the ciccr package.
 
 ```{r example}
 library(ciccr)
 ```
 
-To illustrate the usefulness of the package, we use the dataset ACS that is included the packcage. This dataset is a extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
+To illustrate the usefulness of the package, we use the dataset ACS that is included in the package. This dataset is an extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
 
 ```{r}
   y = ACS$topincome
@@ -54,13 +50,13 @@ To illustrate the usefulness of the package, we use the dataset ACS that is incl
   x = ACS$age
 ```
 
-- The binary outcome `Top Income' is defined to be one if a respondent's annual total pre-tax wage and salary income is top-coded. In our sample extract, the top-coded income bracket has median income $565,000 and the next highest income that is not top-coded is $327,000.   
+- The binary outcome `y` is defined to be one if a respondent's annual total pre-tax wage and salary income is top-coded. In the sample extract, the top-coded income bracket has median income $565,000 and the next highest income that is not top-coded is $327,000.   
 
-- The binary treatment is defined to be one if a respondent has a master's degree, a professional degree, or  a doctoral degree.
+- The binary treatment `t` is defined to be one if a respondent has a master's degree, a professional degree, or  a doctoral degree.
 
-- The covariate is age in years and is restricted to be between 25 and 70.
+- The covariate `x` is age in years and is restricted to be between 25 and 70.
 
-The original ACS sample is not a case-control sample but we construct one by the following procedure. 
+The original ACS survey is not from case-control sampling but we construct a case-control sample by the following procedure: 
 
 1. The case sample is composed of 921 individuals whose income is top-coded.
 2. The control sample of equal size is randomly drawn without replacement from the pool of individuals whose income is not top-coded. 
@@ -71,7 +67,7 @@ We now construct cubic b-spline terms with three inner knots using the age varia
   x = splines::bs(x, df = 6)
 ```
  
-Using the retropspective sieve logistric regression model, we estimate the average of the log odds ratio conditional on the case sample by
+Using the retrospective sieve logistic regression model, we estimate the average of the log odds ratio conditional on the case sample by
 
 ```{r}
   results_case = avg_retro_logit(y, t, x, 'case')
@@ -79,7 +75,7 @@ Using the retropspective sieve logistric regression model, we estimate the avera
   results_case$se
 ```
 
-Here, option `'case'` refers to conditioning on $Y=1$. 
+Here, option `'case'` refers to conditioning on the event that income is top-coded. 
 
 Similarly, we estimate the average of the log odds ratio conditional on the control sample by
 
@@ -89,7 +85,7 @@ Similarly, we estimate the average of the log odds ratio conditional on the cont
   results_control$se
 ```
 
-Here, option `'control'` refers to conditioning on $Y=1$. 
+Here, option `'control'` refers to conditioning on the event that income is not top-coded. 
 
 We carry out causal inference by
 
@@ -97,11 +93,13 @@ We carry out causal inference by
   cicc(y, t, x, 0.2)
 ```
 
-Here, 0.2 is the specified upper bound for unknown $p = \text{Pr}(Y=1)$. If it is not specified, the dafault choice for $p$ is $p = 1$.
+Here, 0.2 is the specified upper bound for unknown case probability. If it is not specified, the default choice for `p` is `p = 1`.
 
 ```{r}
   cicc(y, t, x)
 ```
+
+More to be added
 
 # Reference
 
