--- a/vignettes/ciccr-vignette.Rmd
+++ b/vignettes/ciccr-vignette.Rmd
@@ -89,7 +89,7 @@ results = cicc(y, t, x, 0.2, 0.95)
 Here, 0.2 is the specified upper bound for unknown $p = \text{Pr}(Y=1)$. If it is not specified, the default choice for the upper bound for $p$ is p_upper = 1.
 Here, 0.95 refers to the level of the confidence interval (0.95 is the default choice). 
 
-The S3 objejct `results` contains a grid of estimates `est`, standard errors `se`, and one-sided confidence intervals `ci` ranging from `p = 0` to `p = p_upper`. In addition, the grid `pseq` from 0 to `p_upper` is saved as part of the S3 objejct `results`.
+The S3 object `results` contains a grid of estimates `est`, standard errors `se`, and one-sided confidence intervals `ci` ranging from `p = 0` to `p = p_upper`. In addition, the grid `pseq` from 0 to `p_upper` is saved as part of the S3 object `results`.
 
 ```{r}
  # point estimates
@@ -110,7 +110,7 @@ To be more compatible with the odds ratio, it is useful to transform them by the
  exp(results$ci)
 ```
 
-It is handy to examine the results by ploting a graph.
+It is handy to examine the results by plotting a graph.
 
 ```{r}
   yaxis_limit = c(min(exp(results$est)),(max(exp(results$ci))+0.25*(max(exp(results$ci))-min(exp(results$est)))))
@@ -118,7 +118,7 @@ It is handy to examine the results by ploting a graph.
   lines(results$pseq, exp(results$ci), type = "l", lty = "dashed", col = "red")
 ```
 
-To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will not earn less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph gbove suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between [1, 2.2], which roughly implies that the chance of earning top incomes may increase up to by a factor of around 2, but allowing for possiblity of no positive effect at all. In other words, it is unlikely that the probability of earning top incomes will more than double by pursuing higher education beyond BA.  See [Jun and Lee, 2020](https://arxiv.org/abs/2004.08318) for more detailed explations regarding how to interpret the estimation results.   
+To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will not earn less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph above suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between [1, 2.2], which roughly implies that the chance of earning top incomes may increase up to by a factor of around 2, but allowing for possibility of no positive effect at all. In other words, it is unlikely that the probability of earning top incomes will more than double by pursuing higher education beyond BA.  See [Jun and Lee, 2020](https://arxiv.org/abs/2004.08318) for more detailed explanations regarding how to interpret the estimation results.   
 
 # Comparison with Logistic Regression
 
@@ -135,7 +135,7 @@ exp(ci_logit)
 
 ```
 
-Here, the relevant cofficient is 2.06 (`t`) and its two-sided 90% confidence interval is [1.75, 2.43]. If we assume strong ignorabiity, the treatment effect is about 2 and its two-sided confidence interval is between [1.75, 2.43]. However, it is unlikely that the higher BA treatment satisfies the strong ignorability condition. 
+Here, the relevant coefficient is 2.06 (`t`) and its two-sided 90% confidence interval is [1.75, 2.43]. If we assume strong ignorability, the treatment effect is about 2 and its two-sided confidence interval is between [1.75, 2.43]. However, it is unlikely that the higher BA treatment satisfies the strong ignorability condition. 
 
 # Reference
 
