Major updates on codes and documents

--- a/vignettes/ciccr-vignette.Rmd
+++ b/vignettes/ciccr-vignette.Rmd
@@ -2,8 +2,7 @@
 title: "Causal Inference in Case-Control Studies: Vignette"
 output: rmarkdown::html_vignette
 description: >
-  This vignette describes how to replicate the empirical results reported
-  in the paper entitled "Causaul Inference in Case-Control Studies".
+  This vignette describes how to use package "ciccr" that is based on the paper entitled "Causaul Inference in Case-Control Studies" by Jun and Lee.
 vignette: >
   %\VignetteIndexEntry{Causal Inference in Case-Control Studies: Vignette}
   %\VignetteEngine{knitr::rmarkdown}
@@ -17,12 +16,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Overview
+## Overview
 
 This vignette describes how to use package "ciccr" that is based on the paper entitled  "Causal Inference in Case-Control Studies" ([Jun and Lee, 2020](https://arxiv.org/abs/2004.08318)). 
 
 
-# Tutorials
+## Causal Inference on Relative and Attributable Risk
+
+### Case-Control Sampling
 
 We first load the ciccr and MASS packages.
 
@@ -32,17 +33,17 @@ library(MASS)
 ```
 
 
-To illustrate the usefulness of the package, we use the dataset ACS that is included the package. This dataset is a extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
+To illustrate the usefulness of the package, we use the dataset ACS_CC that is included the package. This dataset is an extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
 
 ```{r}
-  y = ACS$topincome
-  t = ACS$baplus
-  x = ACS$age
+  y = ACS_CC$topincome
+  t = ACS_CC$baplus
+  x = ACS_CC$age
 ```
 
 - The binary outcome `Top Income' ($Y$) is defined to be one if a respondent's annual total pre-tax wage and salary income is top-coded. In our sample extract, the top-coded income bracket has median income $565,000 and the next highest income that is not top-coded is $327,000.   
 
-- The binary treatment ($T$) is defined to be one if a respondent has a master's degree, a professional degree, or  a doctoral degree.
+- The binary treatment ($T$) is defined to be one if a respondent has a master's degree, a professional degree, or a doctoral degree.
 
 - The covariate ($X$) is age in years and is restricted to be between 25 and 70.
 
@@ -57,6 +58,8 @@ We now construct cubic b-spline terms with three inner knots using the age varia
   x = splines::bs(x, df = 6)
 ```
  
+### Causal Inference on Relative Risk Using Case-Control Samples 
+ 
 Define $\beta(y) = E [\log \text{OR}(X) | Y = y]$ for $y = 0,1$, where $\text{OR}(x)$ is the odds ratio conditional on $X=x$:
 $$
 \text{OR}(x) = \frac{P(T=1|Y=1,X=x)}{P(T=0|Y=1,X=x)}\frac{P(T=0|Y=0,X=x)}{P(T=1|Y=0,X=x)}.
@@ -64,7 +67,7 @@ $$
 Using the retrospective sieve logistic regression model, we estimate $\beta(1)$ by
 
 ```{r}
-  results_case = avg_retro_logit(y, t, x, 'case')
+  results_case = avg_RR_logit(y, t, x, 'case')
   results_case$est
   results_case$se
 ```
@@ -74,23 +77,22 @@ Here, option `'case'` refers to conditioning on $Y=1$.
 Similarly, we estimate $\beta(0)$ by
 
 ```{r}
-  results_control = avg_retro_logit(y, t, x, 'control')
+  results_control = avg_RR_logit(y, t, x, 'control')
   results_control$est
   results_control$se
 ```
 
-Here, option `'control'` refers to conditioning on $Y=1$. 
+Here, option `'control'` refers to conditioning on $Y=0$. 
 
-We carry out causal inference by
+We carry out causal inference on relative risk by
 
 ```{r}
-results = cicc(y, t, x, 0.2, 0.95)
+results = cicc_RR(y, t, x, 'cc', 0.95)
 ```
 
-Here, 0.2 is the specified upper bound for unknown $p = \text{Pr}(Y=1)$. If it is not specified, the default choice for the upper bound for $p$ is p_upper = 1.
-Here, 0.95 refers to the level of the confidence interval (0.95 is the default choice). 
+Here, 'cc' refers to case-control sampling and 0.95 refers to the level of the uniform confidence band (0.95 is the default choice). 
 
-The S3 object `results` contains a grid of estimates `est`, standard errors `se`, and one-sided confidence intervals `ci` ranging from `p = 0` to `p = p_upper`. In addition, the grid `pseq` from 0 to `p_upper` is saved as part of the S3 object `results`.
+The S3 object `results` contains estimates `est`, standard errors `se`, and one-sided confidence bands `ci` at `p = 0` and `p = 1`. 
 
 ```{r}
  # point estimates
@@ -99,29 +101,17 @@ The S3 object `results` contains a grid of estimates `est`, standard errors `se`
  results$se
  # confidence intervals 
  results$ci
- # grid points from 0 to p_upper 
- results$pseq
-```
-
-To be more compatible with the odds ratio, it is useful to transform them by the exponential function:
-```{r}
- # point estimate
- exp(results$est)
- # confidence interval estimate
- exp(results$ci)
 ```
 
 It is handy to examine the results by plotting a graph.
 
 ```{r}
-  yaxis_limit = c(min(exp(results$est)),(max(exp(results$ci))+0.25*(max(exp(results$ci))-min(exp(results$est)))))
-  plot(results$pseq, exp(results$est), type = "l", lty = "solid", col = "blue", xlab = "Pr(Y*=1)",ylab = "exp(change in log probability)", xlim = c(0,max(results$pseq)), ylim = yaxis_limit)
-  lines(results$pseq, exp(results$ci), type = "l", lty = "dashed", col = "red")
+cicc_plot(results)
 ```
 
-To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will not earn less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph above suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between [1, 2.2], which roughly implies that the chance of earning top incomes may increase up to by a factor of around 2, but allowing for possibility of no positive effect at all. In other words, it is unlikely that the probability of earning top incomes will more than double by pursuing higher education beyond BA.  See [Jun and Lee, 2020](https://arxiv.org/abs/2004.08318) for more detailed explanations regarding how to interpret the estimation results.   
+To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will not earn less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph above suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between 1 and the upper end points of the uniform confidence bands. This roughly implies that the chance of earning top incomes may increase up to by a factor as large as the upper end points of the uniform confidence band, but allowing for possibility of no positive effect at all.  The results are shown over the range of the unknown true case probability. See [Jun and Lee, 2020](https://arxiv.org/abs/2004.08318) for more detailed explanations regarding how to interpret the estimation results.   
 
-# Comparison with Logistic Regression
+### Comparison with Logistic Regression
 
 We can compare these results with estimates obtained from logistic regression.
 
@@ -138,8 +128,89 @@ exp(ci_logit)
 
 Here, the relevant coefficient is 2.06 (`t`) and its two-sided 90% confidence interval is [1.75, 2.43]. If we assume strong ignorability, the treatment effect is about 2 and its two-sided confidence interval is between [1.75, 2.43]. However, it is unlikely that the higher BA treatment satisfies the strong ignorability condition. 
 
-# Reference
+### Causal Inference on Attributable Risk Using Case-Control Samples 
+
+We now consider attributable risk, that is the absolute difference in probabilities. 
+We carry out causal inference on attributale risk by
+
+```{r}
+results_AR = cicc_AR(y, t, x, sampling = 'cc', no_boot = 100)
+```
+
+The results can be plotted as before.
+
+```{r}
+cicc_plot(results_AR, parameter = 'AR')
+```
+
+The upper bounds are approximately inverted-U shaped. When $p = 0$ or $p=1$, there could no causal effect; the upper bound is maximized around $p-0.5$.    
+
+### Causal Inference on Relative Risk Using Case-Population Samples 
+
+We now consider an example of case-population samples. For this purpose, we use the dataset ACS_CP that is included the package. This dataset is again an extract from American Community Survey (ACS) 2018. The original ACS sample is not a case-population sample but we construct one by the following procedure. 
+
+1. The case sample $(Y=1)$ is composed of 921 individuals whose income is top-coded.
+2. The control sample $(Y=0)$ of equal size is randomly drawn with replacement from all observations and its top-coded status is coded missing.
+
+We use the following variables:  
+
+```{r}
+  y = ACS_CP$topincome
+  t = ACS_CP$baplus
+  x = ACS_CP$age
+```
+
+We print `y` to see how the outcome variable is coded.
+
+```{r}
+ print(head(y))
+```
+
+We now code missing $Y$ by 0 in the population sample. 
+
+```{r}
+  y = as.integer(is.na(y)==FALSE)
+```
+
+We estimate $\beta(0)$ by
+
+```{r}
+  results_control = avg_RR_logit(y, t, x, 'control')
+  results_control$est
+  results_control$se
+```
+
+and carry out causal inference on relative risk by
+
+```{r}
+results = cicc_RR(y, t, x, 'cp', 0.95)
+cicc_plot(results)
+```
+
+Note that the estimates and upper bounds are constant across the unknown true case probability. This is because they do not depend on the value of the case probability in the case-population sample.
+
+### Causal Inference on Attributable Risk Using Case-Population Samples 
+
+We now consider causal inference on attributale risk by
+
+```{r}
+results_AR = cicc_AR(y, t, x, sampling = 'cp', no_boot = 100)
+```
+
+The results can be plotted as before.
+
+```{r}
+cicc_plot(results_AR, parameter = 'AR')
+```
+
+For case-population sampling, the upper bound on attributable risk is a linear function of the unknown true case probability; as a result, it increases linearly, as shown in the figure. 
+
+# References
 
 Sung Jae Jun and Sokbae Lee. Causal Inference in Case-Control Studies. 
 https://arxiv.org/abs/2004.08318.
+
+Manski, C.F. (1997). Monotone Treatment Response. Econometrica, 65(6), 1311-1334.
+
+Manski, C.F. and Pepper, J.V. (2000). Monotone Instrumental Variables: With an Application to the Returns to Schooling. Econometrica, 68(4), 997-1010.
 
