--- a/README.Rmd
+++ b/README.Rmd
@@ -43,12 +43,12 @@ We first call the ciccr package.
 library(ciccr)
 ```
 
-To illustrate the usefulness of the package, we use the dataset ACS that is included in the package. This dataset is an extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
+To illustrate the usefulness of the package, we use the dataset ACS_CC that is included the package. This dataset is an extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about US population. We use the following variables:  
 
 ```{r}
-  y = ACS$topincome
-  t = ACS$baplus
-  x = ACS$age
+  y = ACS_CC$topincome
+  t = ACS_CC$baplus
+  x = ACS_CC$age
 ```
 
 - The binary outcome `y` is defined to be one if a respondent's annual total pre-tax wage and salary income is top-coded. In the sample extract, the top-coded income bracket has median income \$565,000 and the next highest income that is not top-coded is \$327,000.   
@@ -71,7 +71,7 @@ We now construct cubic b-spline terms with three inner knots using the age varia
 Using the retrospective sieve logistic regression model, we estimate the average of the log odds ratio conditional on the case sample by
 
 ```{r}
-  results_case = avg_retro_logit(y, t, x, 'case')
+  results_case = avg_RR_logit(y, t, x, 'case')
   results_case$est
   results_case$se
 ```
@@ -81,7 +81,7 @@ Here, option `'case'` refers to conditioning on the event that income is top-cod
 Similarly, we estimate the average of the log odds ratio conditional on the control sample by
 
 ```{r}
-  results_control = avg_retro_logit(y, t, x, 'control')
+  results_control = avg_RR_logit(y, t, x, 'control')
   results_control$est
   results_control$se
 ```
@@ -91,9 +91,9 @@ Here, option `'control'` refers to conditioning on the event that income is not 
 We carry out causal inference by
 
 ```{r}
-  results = cicc(y, t, x, p_upper = 0.2)
+results = cicc_RR(y, t, x, 'cc', 0.95)
 ```
-Here, 0.2 is the specified upper bound for unknown case probability. If it is not specified, the default choice for `p` is `p = 1`. 
+Here, 'cc' refers to case-control sampling and 0.95 refers to the level of the uniform confidence band (0.95 is the default choice). 
 
 ```{r}
   est = results$est
@@ -102,39 +102,17 @@ Here, 0.2 is the specified upper bound for unknown case probability. If it is no
   print(se)
   ci = results$ci
   print(ci)
-  pseq = results$pseq
-  print(pseq)
 ```
 
-The S3 object `results` contains a grid of estimates `est`, standard errors `se`, and one-sided confidence intervals `ci` ranging from `p = 0` to `p = p_upper`. In addition, the grid `pseq` from 0 to `p_upper` is saved as part of the S3 object `results`.
-
-The default coverage probability is set at 0.95 and the default length of the grid is 20. Both can can be changed in the `cicc` command. For example, the following command sets the coverage probability at 0.9 and the length of the grid at 30.
+The S3 object `results` contains estimates `est`, standard errors `se`, and one-sided confidence bands `ci` at `p = 0` and `p = 1`. The point estimates and confidence interval estimates of the `cicc_RR` command are based on the scale of log relative risk. It is more conventional to look at the results in terms of the relative scale. To do so, we plot the results in the following way:  
 
 ```{r}
-  results = cicc(y, t, x, p_upper = 0.2, cov_prob = 0.9, length = 30L)
+cicc_plot(results)
 ```
 
-The point estimates and confidence interval estimates of the `cicc` command are based on the scale of log relative risk. It is more conventional to look at the results in terms of the relative scale. To do so, we take the exponential:  
+To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will not earn less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph above suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between 1 and the upper end points of the uniform confidence bands. This roughly implies that the chance of earning top incomes may increase up to by a factor as large as the upper end points of the uniform confidence band, but allowing for possibility of no positive effect at all.  The results are shown over the range of the unknown true case probability. See [Jun and Lee, 2020](https://arxiv.org/abs/2004.08318) for more detailed explanations regarding how to interpret the estimation results.   
 
-```{r}
-  e_est = exp(est)
-  e_ci = exp(ci)
-  print(e_est)
-  print(e_ci)
-```
-
-It is handy to examine the results by plotting a graph.
-
-```{r}
-  yaxis_limit = c(min(e_est),(max(e_ci)+0.25*(max(e_ci)-min(e_est))))
-  plot(pseq, e_est, type = "l", lty = "solid", col = "blue", xlab = "Pr(Y*=1)",ylab = "exp(change in log probability)", xlim = c(0,max(pseq)), ylim = yaxis_limit)
-  lines(pseq, e_ci, type = "l", lty = "dashed", col = "red")
-```
-
-
-To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will not earn less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph above suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between [1, 2.2], which roughly implies that the chance of earning top incomes may increase up to by a factor of around 2, but allowing for possibility of no positive effect at all. In other words, it is unlikely that the probability of earning top incomes will more than double by pursuing higher education beyond BA.  See [Jun and Lee, 2020](https://arxiv.org/abs/2004.08318) for more detailed explanations regarding how to interpret the estimation results.  
-
-# Comparison with Logistic Regression
+## Comparison with Logistic Regression
 
 We can compare these results with estimates obtained from logistic regression.
 
@@ -150,8 +128,16 @@ exp(ci_logit)
 
 Here, the relevant coefficient is 2.06 (`t`) and its two-sided 90% confidence interval is [1.75, 2.43]. If we assume strong ignorability, the treatment effect is about 2 and its two-sided confidence interval is between [1.75, 2.43]. However, it is unlikely that the higher BA treatment satisfies the strong ignorability condition. 
 
-## Reference
+## What else the package can do
+
+See the vignette for other examples that include inference on attributable risk and how to work with case-population samples. 
+
+# References
 
 Sung Jae Jun and Sokbae Lee. Causal Inference in Case-Control Studies. 
 https://arxiv.org/abs/2004.08318.
+
+Manski, C.F. (1997). Monotone Treatment Response. Econometrica, 65(6), 1311-1334.
+
+Manski, C.F. and Pepper, J.V. (2000). Monotone Instrumental Variables: With an Application to the Returns to Schooling. Econometrica, 68(4), 997-1010.
 
