--- a/vignettes/ciccr-vignette.Rmd
+++ b/vignettes/ciccr-vignette.Rmd
@@ -131,7 +131,7 @@ Here, the relevant coefficient is 2.06 (`t`) and its two-sided 90% confidence in
 ### Causal Inference on Attributable Risk Using Case-Control Samples 
 
 We now consider attributable risk, that is the absolute difference in probabilities. 
-We carry out causal inference on attributale risk by
+We carry out causal inference on attributable risk by
 
 ```{r}
 results_AR = cicc_AR(y, t, x, sampling = 'cc', no_boot = 100)
@@ -191,7 +191,7 @@ Note that the estimates and upper bounds are constant across the unknown true ca
 
 ### Causal Inference on Attributable Risk Using Case-Population Samples 
 
-We now consider causal inference on attributale risk by
+We now consider causal inference on attributable risk by
 
 ```{r}
 results_AR = cicc_AR(y, t, x, sampling = 'cp', no_boot = 100)
